ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ParameterLists/parserParameterList11/input.ts.stderr
error[1047]: A rest parameter cannot be optional
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ParameterLists/parserParameterList11/input.ts:1:8
  |
1 | (...arg?) => 102;
  |        ^

